--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 __pycache__/
 *.py[cod]
 *$py.class
+.vscode/
 
 # C extensions
 *.so
@@ -63,6 +64,7 @@ db.sqlite3-journal
 
 # Flask stuff:
 instance/
+static/
 .webassets-cache
 
 # Scrapy stuff:
